Fixed for non CHPP users

--- a/css/main.css
+++ b/css/main.css
@@ -442,6 +442,10 @@ footer a:hover {
           user-select: none;
 }
 
+.btn-radio.hide {
+  display: none;
+}
+
 .btn-checkbox {
   display: block !important;
 }
